# agno-article-selector

./: .gitignore  AGNO_IMPLEMENTATION.md  Makefile  PARITY_STATUS.md  PARITY_SUMMARY.md  README.md  TEST_RESULTS.md  WORKFLOW_ANALYSIS.md  check_agno_models.py  check_motherduck_content_table.py  demo_workflow.py  example_usage.py  explore_motherduck.py  find_articles_table.py  pyproject.toml  requirements.txt  run_article_selector.py  run_article_selector_v2.py  test_csv_loading.py  test_motherduck_connection.py  test_motherduck_query.py
api/: __init__.py  main.py
cli/: process_articles.py  run_agent.py  view_responses.py
core/: __init__.py  database.py  output_formatter.py  response_tracker.py  settings.py
core/agents/: __init__.py  base.py
core/workflows/: __init__.py  base.py
projects/article_selector/agents/: __init__.py  comparative_ranker_agent.py  first_pass_agent.py  scoring_agent.py  selector_agent.py  tracked_agents.py  tracked_agents_async.py
projects/article_selector/config/: __init__.py  domain_config.py
projects/article_selector/models/: __init__.py  article_models.py
projects/article_selector/prompts/: comparative_ranker_prompt.txt  first_pass_prompt.txt  scoring_prompt.txt  selector_prompt.txt  system_prompt.txt
projects/article_selector/runners/: __init__.py  comparative_ranker_runner.py
projects/article_selector/workflows/: __init__.py  article_selection_workflow.py  article_selection_workflow_v2.py
scripts/: dev_setup.sh  format.sh  run.sh  validate.sh
